Fixed doubletap accidental zoom out on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1600,7 +1600,7 @@ input[type="range"]:focus::-moz-range-thumb {
   .top-buttons {
     width: 60vw;
     margin: 0 auto;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     /* justify-content: stretch; */
     border-radius: 0 0 12px 12px;
     /* overflow: hidden; */
@@ -1626,6 +1626,18 @@ input[type="range"]:focus::-moz-range-thumb {
     gap: .2rem;
   }
 
+  .documentation-container {
+    width: 70%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    gap: .4rem;
+    padding: .5rem;
+  }
+
+
 }
 
 @media only screen and (max-width: 800px) {
@@ -1645,7 +1657,7 @@ input[type="range"]:focus::-moz-range-thumb {
   }
 
   .toggle-documentation {
-    top: 36rem;
-    left: 1rem;
+    top: 16rem;
+    left: 1.2rem;
   }
 }
